# jornadadedados

./: pyproject.toml
aula_02/: exercicios.py
aula_03/: .gitignore  README.md  exercicio.py  lendo_arquivos.py
aula_11/: pyproject.toml
aula_11/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py
aula_11/src/: CsvSource.py  api.py  cards.py  main.py  main2.py  schema.py
aula_16/aula_16/src/: main.py
aula_17/pythonProject/src/: desafio.py  exemplo.py  exemplo_api.py
aula_17/pythonProject/src/api/: controller.py  db.py  models.py  schema.py
aula_17/pythonProject/src/fast_api/: main.py
