[tool.poetry]
name = "aulas-python"
version = "0.1.0"
description = ""
authors = ["Eduardo Couto <eduardo.lcouto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
