[tool.poetry]
name = "aula-11"
version = "0.1.0"
description = ""
authors = ["Eduardo Couto <eduardo.lcouto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
loguru = "^0.7.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
